--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bcrypt": "^5.1.1",
     "better-sqlite3": "^11.8.1",
     "email-validator": "^2.0.4",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "express-session": "^1.18.1"
   }
 }
