--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "better-sqlite3": "^11.8.1",
     "email-validator": "^2.0.4",
     "express": "^4.18.2",
-    "express-session": "^1.18.1"
+    "express-session": "^1.18.1",
+    "obscenity": "^0.4.3"
   }
 }
