--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "email-validator": "^2.0.4",
     "express": "^4.18.2",
     "express-session": "^1.18.1",
+    "isbn3": "^1.2.7",
     "obscenity": "^0.4.3"
   }
 }
