--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
   },
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/geshan/nodejs-sqlite.git"
@@ -25,6 +26,12 @@
     "express": "^4.18.2",
     "express-session": "^1.18.1",
     "isbn3": "^1.2.7",
-    "obscenity": "^0.4.3"
+    "obscenity": "^0.4.3",
+    "winston": "^3.17.0"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.21.0",
+    "eslint": "^9.21.0",
+    "globals": "^16.0.0"
   }
 }
