--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "express": "^4.18.2",
     "express-session": "^1.18.1",
     "isbn3": "^1.2.7",
+    "mime-types": "^2.1.35",
+    "multer": "^1.4.5-lts.1",
     "obscenity": "^0.4.3",
     "winston": "^3.17.0"
   },
